--- a/www/css/site.css
+++ b/www/css/site.css
@@ -89,3 +89,35 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+/* -------------------------------------------------------------------------- */
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus,
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  color: #fff;
+  background-color: #080808;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color: #fff;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #fff;
+}
+
+/* -------------------------------------------------------------------------- */
+
+.navbar-main .navbar-brand > div {
+	height: 100%;
+}
+
+.navbar-main .navbar-brand > div > img {
+	height: 100%;
+}
+
+/* -------------------------------------------------------------------------- */
