Work orders - view

--- a/www/css/site.css
+++ b/www/css/site.css
@@ -126,4 +126,8 @@ a:focus {
 	height: 100%;
 }
 
+.work-order-view .table th {
+	background: #f4f4f4;
+}
+
 /* -------------------------------------------------------------------------- */
