Table title Add button

--- a/www/css/site.css
+++ b/www/css/site.css
@@ -150,41 +150,18 @@ select.form-control {
 
 
 
-.navbar-tables .container {
-	padding: 0px;
-	width: 100%;
-}
-
-.navbar-tables .navbar-collapse {
-	padding: 0px;
-}
-
-.navbar-tables .navbar-header {
-	width: 100%;
-	margin: 0px;
-}
-
-.navbar-tables .navbar-collapse {
-	width: 100%;
-	margin: 0px;
-}
-
-.navbar-tables ul {
-	margin: 0px;
-}
-
-.navbar-tables ul li {
-	width: 160px;
-}
-
-.navbar-tables ul li a {
-	padding: 10px;
-	border-right: 1px solid #ccc;
-}
-
-
 .nav-tables {
 	margin-bottom: 20px;
+	padding-left: 2px;
+}
+
+.table-info {
+	margin-bottom: 20px;
+}
+
+.table-info .title {
+	font-size: 16px;
+	padding: 6px 0px;
 }
 
 /* -------------------------------------------------------------------------- */
