Interface Url links

--- a/www/css/site.css
+++ b/www/css/site.css
@@ -172,4 +172,8 @@ select.form-control {
 	background: #fff;
 }
 
+.breadcrumb > li + .back-link::before {
+    content: "";
+}
+
 /* -------------------------------------------------------------------------- */
